# cosmopot

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  semantic-pr.yml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py
apps/backend/src/backend/: app.py
apps/backend/src/backend/api/: middleware.py
apps/backend/src/backend/api/dependencies/: users.py
apps/backend/src/backend/api/routes/: auth.py  bot.py  generation.py  health.py  payments.py  task_ws.py  users.py
apps/backend/src/backend/api/schemas/: generation.py  payments.py  users.py
apps/backend/src/backend/auth/: dependencies.py  middleware.py  models.py  rate_limiter.py  schemas.py  service.py  tokens.py
apps/backend/src/backend/core/: config.py  lifespan.py  redis.py
apps/backend/src/backend/db/: base.py  dependencies.py  session.py  types.py
apps/backend/src/backend/generation/: __init__.py  broadcaster.py  models.py  repository.py  service.py
apps/backend/src/backend/payments/: dependencies.py  enums.py  gateway.py  models.py  service.py
apps/backend/src/backend/services/: __init__.py  telegram.py
apps/backend/tests/: conftest.py  test_auth_endpoints.py  test_auth_tokens.py  test_generation_api.py  test_payments.py  test_task_websocket.py  test_telegram_auth.py  test_user_api.py
apps/bot/src/bot/: __init__.py  polling.py  runtime.py
apps/bot/src/bot/handlers/: commands.py
apps/bot/src/bot/middlewares/: dependency.py  error.py  logging.py
apps/bot/src/bot/services/: auth.py
apps/bot/src/bot_runtime/: runtime.py
apps/bot/src/bot_runtime/middlewares/: dependency.py  error.py
apps/bot/tests/: conftest.py  test_auth_gateway.py  test_handlers.py  test_webhook.py
backend/: requirements.txt
backend/app/: celery_app.py  config.py  db.py  main.py  tasks.py
backend/app/worker/: banana.py  bootstrap.py  config.py  db.py  images.py  logging.py  processor.py  redis_events.py  storage.py
docs/: ci-pipeline.md  user_domain.md
frontend/: Dockerfile  requirements.txt
frontend/app/: gateway.py  main.py
frontend/app/templates/: index.html
frontend/spa/: .eslintrc.cjs  .stylelintrc.cjs  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/spa/src/: main.ts
frontend/spa/src/components/layout/: AppFooter.vue  AppHeader.vue  DashboardShell.vue
frontend/spa/src/components/ui/: NotificationCenter.vue
frontend/spa/src/router/: index.ts  routes.ts
frontend/spa/src/stores/: auth.ts
frontend/spa/src/styles/: global.css  tokens.css
frontend/spa/src/tests/: setup.ts
frontend/spa/src/views/auth/: LoginView.vue
frontend/spa/src/views/dashboard/: DashboardView.vue  SettingsView.vue
frontend/spa/src/views/errors/: NotFoundView.vue
migrations/: env.py
migrations/versions/: 0001_create_user_domain.py  0002_create_billing_domain.py  0003_create_generation_tasks.py
nginx/: nginx.conf
scripts/: connectivity_check.py
src/bot/: __init__.py  commands.py  config.py  handlers.py  keyboards.py  models.py  services.py  validators.py
src/user_service/: __init__.py  database.py  enums.py  models.py  repository.py  schemas.py  services.py
tests/: conftest.py  factories.py  test_billing.py  test_generation_tasks.py  test_user_repository.py
tests/bot/: test_handlers.py  test_services.py  test_validators.py
tests/frontend/: test_frontend_app.py
tests/worker/: test_banana_client.py  test_images.py  test_pipeline_integration.py
worker/: requirements.txt
