[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform"
version = "0.1.0"
description = "Monorepo containing backend, bot, and shared user services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.4",
    "pydantic-settings>=2.0",
    "alembic>=1.12",
    "aiosqlite>=0.19",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "structlog>=23.1",
    "redis>=5.0",
    "fakeredis>=2.19",
    "celery>=5.3",
    "aio-pika>=9.2.2",
    "argon2-cffi>=23.1",
    "PyJWT>=2.8",
    "yookassa>=3.0",
    "greenlet>=3.0",
    "orjson>=3.9",
    "Pillow>=10.0",
    "minio>=7.1",
    "aiogram>=3.2",
    "boto3>=1.28",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9",
    "coverage[toml]>=7.3",
    "mypy>=1.5",
    "pytest-cov>=4.1",
    "ruff>=0.1.5",
]

[tool.setuptools.packages.find]
where = ["src", "apps/backend/src", "apps/bot/src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "apps/backend/tests", "apps/bot/tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=backend --cov=bot --cov=user_service --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"
pythonpath = ["src", "apps/backend/src", "apps/bot/src"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
# Allow src and apps/bot/src to share the "bot" namespace without duplicate-module errors; keep __init__.py files at each root for this to work.
explicit_package_bases = true
namespace_packages = true
# Point mypy at all package roots so imports like `backend.*` and `bot.*` resolve.
# Set mypy_path to resolve backend, bot, and user_service packages from their root locations
mypy_path = "src:apps/backend/src:apps/bot/src:backend"
# Check specific packages individually to avoid namespace package conflicts
files = [
    "src/bot",
    "src/user_service",
    "apps/backend/src/backend",
    "apps/bot/src/bot_runtime",
    "backend/app",
    "migrations",
    "tests",
    "apps/backend/tests",
    "apps/bot/tests",
]
exclude = [
    "^\\.venv/",
    "^frontend/",
]

# Silence missing type information for third-party packages without stubs.
[[tool.mypy.overrides]]
module = [
    "aio_pika",
    "aio_pika.*",
    "aioboto3",
    "aioboto3.*",
    "aiogram",
    "aiogram.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "celery",
    "celery.*",
    "minio",
    "minio.*",
    "prometheus_client",
    "prometheus_fastapi_instrumentator",
    "psycopg_pool",
    "redis.asyncio",
    "redis.asyncio.*",
    "sentry_sdk",
    "structlog",
    "structlog.*",
    "PIL",
    "PIL.*",
    "yookassa",
    "yookassa.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["apps/backend/src", "apps/backend/tests", "apps/bot/src", "apps/bot/tests", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "UP", "ASYNC"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
source = ["backend", "bot", "user_service"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
